testsuites/LLT/compiler/Diagnose/lex_test/lex_illegal_content_in_interpolation/case2.expect.out
error: unterminated string interpolation
  ==> case2.cj:14:24:
   | 
14 |     "cangjie1 ${"cangjie1 ${//}"}
   |                 ~         ^^^^^^^^ unterminated string interpolation
   |                 |
   |                 because it is in single-line string
   | 

1 error generated, 1 error printed.
